    Additionally, the history of the two projects has been merged
    (thanks Carnë Draug).

 *  New commands:

          coeffs
          ipermute
          isallconstant
          isconstant
          nchoosek
          permute

 *  Fixes for developement version of SymPy.

 *  Fixes for vpa and vpasolve: high precision should be more reliable.

 *  On Windows, default to ascii rendering for now (until unicode
    is fixed in Octave on that platform).

 *  No longer needs to autogenerate a bunch of functions at install
    time: hopefully making it easier than ever to get involved!



octsympy 0.1.3 (2015-01-06)
===========================

 *  New commands:

          argnames           partfrac
          digits             orth
          ilaplace           rank
          laplace            rref
          ldivide            sum
          mldivide           vpa
          null	             vpasolve

 *  Symbolic backslash support.

 *  variable-precision arithmetic support: see vpa, digits, vpasolve.

 *  Much-improved dsolve thanks to Andrés Prieto.

 *  Laplace and inverse Laplace transforms (Andrés Prieto).

 *  Partial fractions (Andrés Prieto).

 *  Improvments to solve (Andrés Prieto).

 *  Preliminary support for matrix expressions, e.g., matrix to a symbolic
    power.

 *  Should work properly with Stand-alone Python (thanks to David Manthey).



octsympy 0.1.2 (2014-12-01)
===========================

 *  New commands:

          children           rhs
          expm	             setdiff
          lhs	             setxor
          pinv	             trace
          potential

 *  Support new SymPy 0.7.6.  This adds Octave code generation which means
    that OctSymPy's `matlabFunction` is supported.

 *  For now, SymPy 0.7.5 should still work, but upgrading to SymPy 0.7.6 is
    recommended.



octsympy 0.1.1 (2014-10-20)  Rose Garden
========================================

Major Changes
-------------
